@@ -10,12 +10,12 @@
 * @version		$Id: version.php 897 2008-02-15 19:53:31Z malanciault $
 */
 
-define("ICMS_VERSION_NAME",'ImpressCMS 1.1.1 Beta 1');
+define('ICMS_VERSION_NAME','ImpressCMS 1.1.1 Beta 1');
 
 // For backward compatibility with XOOPS
-define("XOOPS_VERSION", ICMS_VERSION_NAME);
+define('XOOPS_VERSION', ICMS_VERSION_NAME);
 
-/*
+/**
  * Version Status
  * 1  = Alpha
  * 2  = Beta
@@ -23,12 +23,23 @@ define("XOOPS_VERSION", ICMS_VERSION_NAME);
  * 10 = Final
  */
 
-define("ICMS_VERSION_STATUS", 2);
+define('ICMS_VERSION_STATUS', 2);
 
-/*
+/**
  * Build number
  *
  * Every release has its own build number, incrementable by 1 everytime we make a release
  */
-define("ICMS_VERSION_BUILD", 19);
+define('CMS_VERSION_BUILD', 19);
+
+/**
+ * Latest dbversion of the System Module
+ *
+ * When installing ImpressCMS, the Systeme Module's dbversion needs to be the latest dbversion found
+ * in system/include/update.php
+ *
+ * So, developers, everytime you add an upgrade block in system/include/update.php to upgrade something in the DB,
+ * pease also change this constant
+ */
+define('ICMS_SYSTEM_DBVERSION', 11);
 ?>
